--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,12 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter:5.9.0'
+    )
+}
+
+test {
+    useJUnitPlatform()
+}
